--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,21 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.81"
 axum = "0.7.5"
+dotenv = "0.15.0"
+http-body = "1.0.0"
 http-body-util = "0.1.1"
 hyper = { version = "1.2.0", features = ["full"] }
 mime = "0.3.17"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
+sqlx-cli = "0.7.4"
 thiserror = "1.0.58"
 tokio = { version = "1.37.0", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+validator = { version = "0.18", features = ["derive"] }
+
+[dev-dependencies]
+cargo-watch = "8.5.2"
