added feature flug

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ validator = { version = "0.18", features = ["derive"] }
 
 [dev-dependencies]
 cargo-watch = "8.5.2"
+
+[features]
+default = ["database-test"]
+database-test = []
