--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,6 +22,8 @@ tokio = { version = "1.37.0", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+utoipa = { version = "4.2.0", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
 validator = { version = "0.18", features = ["derive"] }
 
 [dev-dependencies]
