--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:path": "pathpida --enableStatic --ignorePath .gitignore --watch",
+    "dev:openapi2aspida": "if [ -d src/api ]; then rm -r src/api; fi; openapi2aspida -i=./backend/openapi.json -o=src/api",
+    "build": "pathpida --enableStatic --ignorePath .gitignore && next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,19 +16,26 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "npm-run-all": "^4.1.5",
+    "openapi2aspida": "^0.23.2",
+    "pathpida": "^0.22.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5"
   }
 }
