--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev:next": "next dev",
     "dev:path": "pathpida --enableStatic --ignorePath .gitignore --watch",
     "dev:openapi2aspida": "if [ -d src/api ]; then rm -r src/api; fi; openapi2aspida -i=./backend/openapi.json -o=src/api",
-    "build": "pathpida --enableStatic --ignorePath .gitignore && next build && next export",
+    "build": "pathpida --enableStatic --ignorePath .gitignore && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tauri": "tauri"
   },
   "dependencies": {
+    "@aspida/axios": "^1.14.0",
+    "@aspida/react-query": "^1.14.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -20,18 +23,26 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
+    "@tauri-apps/api": "next",
+    "@tauri-apps/cli": "next",
+    "aspida": "^1.14.0",
+    "axios": "^1.6.8",
     "next": "14.2.3",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-query": "^3.39.3",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "internal-ip": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "openapi2aspida": "^0.23.2",
     "pathpida": "^0.22.0",
