--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "ajv": "^8.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "internal-ip": "^8.0.0",
