--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 shuttle-axum = "0.44.0"
 shuttle-runtime = "0.44.0"
-shuttle-shared-db = { version = "0.44.0", features = ["postgres"] }
+shuttle-shared-db = { version = "0.44.0", features = ["postgres", "sqlx"] }
 sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
 sqlx-cli = "0.7.4"
 thiserror = "1.0.58"
