--- a/src-cloud/Cargo.toml
+++ b/src-cloud/Cargo.toml
@@ -30,6 +30,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 utoipa = { version = "4.2.0", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
 validator = { version = "0.18", features = ["derive"] }
+todos = { path = "../shared/todos"}
 
 [dev-dependencies]
 cargo-watch = "8.5.2"
