--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aspida/axios": "^1.14.0",
+    "@aspida/fetch": "^1.14.0",
     "@aspida/react-query": "^1.14.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
