--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,3 +21,5 @@ tauri-build = { version = "2.0.0-beta.12", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta.15", features = [] }
+todos = { path = "../shared/todos" }
+async-trait = "0.1.80"
