--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,5 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta.15", features = [] }
 todos = { path = "../shared/todos" }
+shared = { path = "../shared" }
 async-trait = "0.1.80"
