--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -1,8 +1,29 @@
-[workspace]
-members = ["todos"]
-nested = true
+[package]
+name = "shared"
+version = "0.1.0"
+edition = "2021"
 
-[profile.release]
-strip = true
-lto = true
-opt-level = "s"
+[dependencies]
+anyhow = "1.0.81"
+axum = "0.7.5"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
+sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "any", "postgres"] }
+sqlx-cli = "0.7.4"
+thiserror = "1.0.58"
+utoipa = { version = "4.2.0", features = ["axum_extras"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
+validator = { version = "0.18", features = ["derive"] }
+tokio = { version = "1.37.0", features = ["full"] }
+dotenv = "0.15.0"
+env_logger = "0.11.3"
+log = "0.4.21"
+rust-ini = "0.21.0"
+once_cell = "1.19.0"
+reqwest = {version = "0.12.5", features = ["json", "rustls-tls", "socks"], default-features = false}
+sled = "0.34.7"
+dirs = "5.0.1"
+
+[features]
+default = ["database-test"]
+database-test = []
