--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ tauri-build = { version = "2.0.0-beta.12", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "2.0.0-beta.15", features = [] }
-todos = { path = "../shared/todos" }
+#todos = { path = "../shared/todos" }
 shared = { path = "../shared" }
 async-trait = "0.1.80"
+tauri-cli = "1.5.14"
+log = "0.4.21"
